--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,12 +59,12 @@ jobs:
       - restore_cache:
           keys: [backend-build]
       - run:
-          name: Build back-end 
+          name: Back-end build
           command: |
              # Your code here
-            cd backend
-            npm i
-            npm run build
+             cd backend
+             npm i
+             npm run build
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
