--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,8 +123,9 @@ jobs:
           command: |
             cd frontend
             npm i
-            # npm audit fix --audit-level=critical --force
-            # npm install oauth-sign@^0.9.0            
+            npm audit fix --audit-level=critical --force
+            # If the "npm audit fix" command above could not fix all critical vulnerabilities, try “npm audit fix --force” again   
+            npm audit fix --force
             npm audit --audit-level=critical
 
   scan-backend:
@@ -143,10 +144,9 @@ jobs:
           command: |
             cd backend
             npm i
-            # npm audit fix --audit-level=critical --force
-            # # If the "npm audit fix" command above could not fix all critical vulnerabilities, try “npm audit fix --force” again   
-            # npm audit fix --force
-            # npm install oauth-sign@^0.9.0
+            npm audit fix --audit-level=critical --force
+            # If the "npm audit fix" command above could not fix all critical vulnerabilities, try “npm audit fix --force” again   
+            npm audit fix --force
             npm audit --audit-level=critical
 
 #   deploy-infrastructure:
