--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,9 +124,7 @@ jobs:
             cd frontend
             npm i
             npm audit fix --audit-level=critical --force
-            # If the "npm audit fix" command above could not fix all critical vulnerabilities, try “npm audit fix --force” again   
-            npm audit fix --force
-            npm audit --audit-level=critical
+            # npm audit --audit-level=critical
 
   scan-backend:
     docker:
