--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,7 +124,8 @@ jobs:
           command: |
             cd frontend
             npm i
-            npm audit fix --audit-level=critical
+            npm audit fix --audit-level=critical --force
+            # npm audit --audit-level=critical
 
   scan-backend:
     docker:
@@ -142,7 +143,10 @@ jobs:
           command: |
             cd backend
             npm i
-            npm audit fix --audit-level=critical
+            npm audit fix --audit-level=critical --force
+            # If the "npm audit fix" command above could not fix all critical vulnerabilities, try “npm audit fix --force” again   
+            npm audit fix --force
+            npm audit --audit-level=critical
 
 #   deploy-infrastructure:
 #     docker:
