--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,7 +125,8 @@ jobs:
             cd frontend
             npm i
             npm audit fix --audit-level=critical --force
-            # npm audit --audit-level=critical
+            # If the "npm audit fix" command above could not fix all critical vulnerabilities, try “npm audit fix --force” again   
+            npm audit --audit-level=critical
 
   scan-backend:
     docker:
@@ -145,7 +146,6 @@ jobs:
             npm i
             npm audit fix --audit-level=critical --force
             # If the "npm audit fix" command above could not fix all critical vulnerabilities, try “npm audit fix --force” again   
-            npm audit fix --force
             npm audit --audit-level=critical
 
 #   deploy-infrastructure:
