--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,13 +1,14 @@
-NODE_ENV=local
-VERSION=1
-TYPEORM_CONNECTION=postgres
-TYPEORM_MIGRATIONS_DIR=./src/migrations
-TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts
-TYPEORM_MIGRATIONS=./src/migrations/*.ts
+export ENVIRONMENT=production
+export NODE_ENV=production
+export VERSION=1
+export TYPEORM_CONNECTION=postgres
+export TYPEORM_MIGRATIONS_DIR=./src/migrations
+export TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts
+export TYPEORM_MIGRATIONS=./src/migrations/*.ts
 
 # Use these values for the local PG database from the Docker Compose file
-TYPEORM_HOST=localhost
-TYPEORM_PORT=5532
-TYPEORM_USERNAME=postgres
-TYPEORM_PASSWORD=password
-TYPEORM_DATABASE=glee
+export TYPEORM_HOST=udapeople-prod.cmtgtb2bfwkp.us-east-1.rds.amazonaws.com
+export TYPEORM_PORT=5432
+export TYPEORM_USERNAME=postgres
+export TYPEORM_PASSWORD=postgres
+export TYPEORM_DATABASE=postgres
