--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^6.11.11",
     "@nestjs/core": "^6.11.11",
+    "@nestjs/cqrs": "^6.1.0",
     "@nestjs/jwt": "^6.0.0",
     "@nestjs/passport": "^6.2.0",
     "@nestjs/platform-express": "^6.11.11",
@@ -42,32 +43,30 @@
     "@nestjs/typeorm": "^6.3.4",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/winston": "^2.4.4",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "0.12.2",
     "cli-color": "^1.3.0",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
-    "express": "^4.18.2",
+    "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "glee-jwks-rsa": "^1.1.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
-    "moment-timezone": "^0.5.43",
-    "passport": "^0.6.0",
+    "moment-timezone": "^0.5.28",
+    "passport": "^0.4.1",
     "passport-auth0": "^1.3.2",
     "passport-jwt": "^4.0.0",
     "pg": "^7.9.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.5.4",
-    "swagger-ui-express": "^4.6.2",
-    "typeorm": "^0.3.15",
+    "swagger-ui-express": "^4.1.4",
+    "typeorm": "^0.2.24",
     "uuid": "^3.4.0",
-    "winston": "^2.4.7",
     "winston-loggly-bulk": "^2.0.3",
     "winston-slack-webhook": "^0.1.6"
   },
   "devDependencies": {
-    "@nestjs/cqrs": "^6.1.0",
     "@nestjs/testing": "^6.11.11",
     "@types/express": "^4.17.3",
     "@types/jest": "^24.9.1",
@@ -89,10 +88,6 @@
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bluerosecloud52/cdond-c3-projectstarter.git"
   },
   "jest": {
     "moduleFileExtensions": [
