--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -40,10 +40,10 @@ Resources:
       InstanceType: t2.micro
       SecurityGroups:
         - Ref: InstanceSecurityGroup
-      KeyName: udacity223 # If you use another key pair name, you should change this value to match.
+      KeyName: iampeople # If you use another key pair name, you should change this value to match.
       # If this ami id is not available for you, you can find another (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/finding-an-ami.html)
       # Ubuntu 18 or higher works fine
-      ImageId: ami-068663a3c6194455
+      ImageId: ami-0aa2b7722dc1b5612
       Tags:
         - Key: Name
           Value: !Sub backend-${ID}
