--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -261,6 +261,7 @@ jobs:
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
               curl --insecure https://kvdb.io/AvGrFom5tpi4FwtbkrbMAy/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+              echo "Inserted into kvdb"
             fi
       # Here's where you will add some code to rollback on failure
       - destroy-environment
