--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -247,16 +247,6 @@ jobs:
     steps:
       # Checkout code from git
       - checkout
-            - attach_workspace:
-          at: .
-      - run:
-          name: Install AWS CLI dependencies
-          working_directory: /tmp
-          command: |
-            sudo apt-get update && sudo apt-get install -yy less
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            sudo ./aws/install
       - run:
           name: Run migrations
           no_output_timeout: 30m
@@ -271,8 +261,8 @@ jobs:
             # Your code here
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-              curl --insecure https://kvdb.io/AvGrFom5tpi4FwtbkrbMAy/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
-              echo "Inserted into kvdb"
+              curl --insecure https://kvdb.io/your_kvdb_database/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+              echo "Inserted to kvdb"
             fi
       # Here's where you will add some code to rollback on failure
       - destroy-environment
