update config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -253,8 +253,8 @@ jobs:
             # Your code here
             cd backend
             npm i
-            run audit fix
-            npm run migrations > migrations_dump.txt
+            npm run migrations > ~/project/backend/migrations_dump.txt
+            cat ~/project/backend/migrations_dump.txt
       - run:
           name: Send migration results to kvdb
           command: |
