--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -252,9 +252,9 @@ jobs:
           command: |
             # Your code here
             cd backend
-            npm i
-            npm run migrations > ~/project/backend/migrations_dump.txt
-            cat ~/project/backend/migrations_dump.txt
+            npm install
+            npm audit fix --audit-level=critical --force
+            npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to kvdb
           command: |
