--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -251,9 +251,10 @@ jobs:
           name: Run migrations
           command: |
             # Your code here
+            sudo npm cache clean -f 
             cd backend
             npm install
-            npm audit fix --audit-level=critical
+            sudo npm audit fix
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to kvdb
