--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -253,18 +253,14 @@ jobs:
             # Your code here
             cd backend
             npm i
-            npm audit fix --audit-level=critical --force
-            npm audit fix --audit-level=critical --force
-            npm audit --audit-level=critical
-            # Run and sve the migration output
-            npm run migrations > ~/project/backend/migrations_dump.txt
+            npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to kvdb
           command: |
             # Your code here
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-              curl --insecure https://kvdb.io/PZXTrZsgZQMEFRGRNYdHHn/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+              curl --insecure https://kvdb.io/your_kvdb_database/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
               echo "Inserted to kvdb"
             fi
       # Here's where you will add some code to rollback on failure
